tools/build-release.sh: always append version to SHA256SUMS file.
Telling users to rename it is a poor idea, and if you have multiple releases in your release/ dir
it will get confusing.  So always append -v25.09 and update docs accordingly.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,7 +148,7 @@ jobs:
           sudo apt-get install -y lowdown
           ./configure
           tools/build-release.sh --without-zip sign
-          mv release/SHA256SUMS.asc${{ steps.gpg.outputs.keyid  }} release/SHA256SUMS.asc
+          mv release/SHA256SUMS.${{ env.version }}.asc${{ steps.gpg.outputs.keyid  }} release/SHA256SUMS.${{ env.version }}.asc
 
       - name: Upload signed artifact
         uses: actions/upload-artifact@v4
