plugins: `cancelrecurringinvoice` command.
`fetchinvoice` variant, for setting invreq_recurrence_cancel instead.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>
Changelog-EXPERIMENTAL: `cancelrecurringinvoice` command to send new "don't expect any more invoice requests" msg to recurring bolt12 invoices.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -30,6 +30,7 @@ MARKDOWNPAGES := doc/addgossip.7 \
 	doc/bkpr-listbalances.7 \
 	doc/bkpr-listincome.7 \
 	doc/blacklistrune.7 \
+	doc/cancelrecurringinvoice.7 \
 	doc/check.7 \
 	doc/checkmessage.7 \
 	doc/checkrune.7 \
