--- a/wallet/Makefile
+++ b/wallet/Makefile
@@ -37,6 +37,7 @@ WALLET_SQL_FILES := 			\
 	wallet/wallet.c 		\
 	wallet/test/run-db.c		\
 	wallet/test/run-wallet.c	\
+	wallet/test/run-chain_moves_duplicate-detect.c	\
 
 wallet/statements_gettextgen.po: $(WALLET_SQL_FILES) $(FORCE)
 	@if $(call SHA256STAMP_CHANGED); then \
