common: add randbytes() wrapper to override cryptographic entropy: $CLN_DEV_ENTROPY_SEED
Only in developer mode, ofc.

Notes:
1. We have to move the initialization before the lightningd main trace_start,
   since that uses pseudorand().
2. To make the results stable, we need to use per-caller values to randbytes().
   Otherwise external timing changes the call order.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/channeld/Makefile
+++ b/channeld/Makefile
@@ -84,6 +84,7 @@ CHANNELD_COMMON_OBJS :=				\
 	common/psbt_open.o			\
 	common/psbt_internal.o			\
 	common/pseudorand.o			\
+	common/randbytes.o			\
 	common/read_peer_msg.o			\
 	common/setup.o				\
 	common/status.o				\
