--- a/channeld/test/Makefile
+++ b/channeld/test/Makefile
@@ -21,6 +21,7 @@ CHANNELD_TEST_COMMON_OBJS :=			\
 	common/msg_queue.o			\
 	common/permute_tx.o			\
 	common/pseudorand.o			\
+	common/randbytes.o			\
 	common/setup.o				\
 	common/utils.o
 
