--- a/common/test/Makefile
+++ b/common/test/Makefile
@@ -31,6 +31,7 @@ common/test/run-json:					\
 	common/lease_rates.o				\
 	common/node_id.o				\
 	common/pseudorand.o				\
+	common/randbytes.o			\
 	common/wireaddr.o				\
 	wire/fromwire.o					\
 	wire/onion_wiregen.o				\
@@ -44,6 +45,7 @@ common/test/run-route common/test/run-route-specific common/test/run-route-inflo
 	common/gossmap.o				\
 	common/node_id.o				\
 	common/pseudorand.o				\
+	common/randbytes.o				\
 	common/route.o					\
         gossipd/gossip_store_wiregen.o			\
 	wire/fromwire.o					\
@@ -119,11 +121,13 @@ common/test/run-trace:					\
 	common/amount.o                                 \
 	common/memleak.o				\
 	common/pseudorand.o				\
+	common/randbytes.o				\
 	common/trace.o					\
 	wire/fromwire.o					\
 	wire/towire.o
 
 common/test/run-htable:					\
+	common/randbytes.o				\
 	common/pseudorand.o
 
 common/test/run-shutdown_scriptpubkey: wire/towire.o wire/fromwire.o
