--- a/lightningd/test/Makefile
+++ b/lightningd/test/Makefile
@@ -21,6 +21,7 @@ LIGHTNINGD_TEST_COMMON_OBJS :=			\
 	common/json_parse_simple.o		\
 	common/key_derive.o			\
 	common/pseudorand.o			\
+	common/randbytes.o			\
 	common/random_select.o			\
 	common/memleak.o			\
 	common/msg_queue.o			\
