--- a/plugins/test/Makefile
+++ b/plugins/test/Makefile
@@ -11,6 +11,7 @@ PLUGIN_TEST_COMMON_OBJS :=			\
 	common/amount.o				\
 	common/autodata.o			\
 	common/pseudorand.o			\
+	common/randbytes.o			\
 	common/setup.o				\
 	common/utils.o
 
