--- a/gossipd/Makefile
+++ b/gossipd/Makefile
@@ -56,6 +56,7 @@ GOSSIPD_COMMON_OBJS :=				\
 	common/ping.o				\
 	common/psbt_open.o			\
 	common/pseudorand.o			\
+	common/randbytes.o			\
 	common/random_select.o			\
 	common/setup.o				\
 	common/status.o				\
