common/clock_time: wrapper for time_now() so we can override it.
Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/connectd/Makefile
+++ b/connectd/Makefile
@@ -48,6 +48,7 @@ CONNECTD_COMMON_OBJS :=				\
 	common/blinding.o			\
 	common/blindedpath.o			\
 	common/channel_id.o			\
+	common/clock_time.o			\
 	common/cryptomsg.o			\
 	common/daemon.o				\
 	common/daemon_conn.o			\
