--- a/channeld/Makefile
+++ b/channeld/Makefile
@@ -48,6 +48,7 @@ CHANNELD_COMMON_OBJS :=				\
 	common/channel_config.o			\
 	common/channel_id.o			\
 	common/channel_type.o			\
+	common/clock_time.o			\
 	common/cryptomsg.o			\
 	common/daemon.o				\
 	common/daemon_conn.o			\
