--- a/closingd/Makefile
+++ b/closingd/Makefile
@@ -25,6 +25,7 @@ CLOSINGD_COMMON_OBJS :=				\
 	common/bigsize.o			\
 	common/bip32.o				\
 	common/channel_id.o			\
+	common/clock_time.o			\
 	common/close_tx.o			\
 	common/cryptomsg.o			\
 	common/daemon.o				\
