--- a/devtools/Makefile
+++ b/devtools/Makefile
@@ -29,6 +29,7 @@ DEVTOOLS_COMMON_OBJS :=				\
 	common/bolt11.o				\
 	common/blockheight_states.o		\
 	common/channel_id.o			\
+	common/clock_time.o			\
 	common/decode_array.o			\
 	common/features.o			\
 	common/fee_states.o			\
