--- a/gossipd/Makefile
+++ b/gossipd/Makefile
@@ -35,6 +35,7 @@ GOSSIPD_COMMON_OBJS :=				\
 	common/bigsize.o			\
 	common/bip32.o				\
 	common/channel_id.o			\
+	common/clock_time.o			\
 	common/cryptomsg.o			\
 	common/daemon.o				\
 	common/daemon_conn.o			\
