--- a/hsmd/Makefile
+++ b/hsmd/Makefile
@@ -31,6 +31,7 @@ HSMD_COMMON_OBJS :=				\
 	common/bolt12_id.o			\
 	common/bolt12_merkle.o			\
 	common/channel_id.o			\
+	common/clock_time.o			\
 	common/daemon.o				\
 	common/daemon_conn.o			\
 	common/derive_basepoints.o		\
