--- a/lightningd/Makefile
+++ b/lightningd/Makefile
@@ -95,6 +95,7 @@ LIGHTNINGD_COMMON_OBJS :=			\
 	common/channel_config.o			\
 	common/channel_id.o			\
 	common/channel_type.o			\
+	common/clock_time.o			\
 	common/coin_mvt.o			\
 	common/configdir.o			\
 	common/configvar.o			\
