--- a/openingd/Makefile
+++ b/openingd/Makefile
@@ -41,6 +41,7 @@ OPENINGD_COMMON_OBJS :=				\
 	common/channel_config.o			\
 	common/channel_id.o			\
 	common/channel_type.o			\
+	common/clock_time.o			\
 	common/cryptomsg.o			\
 	common/daemon.o				\
 	common/daemon_conn.o			\
