docker: Fix missing CLN version in docker image
Changelog-Fixed: Core lightning version in Docker image will not be missing.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,10 @@
-Dockerfile
-contrib/docker/Dockerfile.*
-target
 config.vars
-release/
+.cargo/
+.vscode/
 .venv/
+dist/
+target/
+release/
+focal/
+jammy/
+noble/
